--- a/app/src/main/res/drawable/ic_map_faw.xml
+++ b/app/src/main/res/drawable/ic_map_faw.xml
@@ -16,17 +16,12 @@
   ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
-
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-</RelativeLayout>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportHeight="1792.0"
+    android:viewportWidth="1792.0">
+    <path
+        android:fillColor="#4183D7"
+        android:pathData="M512,0q13,0 22.5,9.5t9.5,22.5v1472q0,20 -17,28l-480,256q-7,4 -15,4 -13,0 -22.5,-9.5t-9.5,-22.5v-1472q0,-20 17,-28l480,-256q7,-4 15,-4zM1760,0q13,0 22.5,9.5t9.5,22.5v1472q0,20 -17,28l-480,256q-7,4 -15,4 -13,0 -22.5,-9.5t-9.5,-22.5v-1472q0,-20 17,-28l480,-256q7,-4 15,-4zM640,0q8,0 14,3l512,256q18,10 18,29v1472q0,13 -9.5,22.5t-22.5,9.5q-8,0 -14,-3l-512,-256q-18,-10 -18,-29v-1472q0,-13 9.5,-22.5t22.5,-9.5z" />
+</vector>
