--- a/app/src/main/res/layout/fragment_check_progress.xml
+++ b/app/src/main/res/layout/fragment_check_progress.xml
@@ -32,7 +32,7 @@
         app:tabTextColor="#DDD" />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/container"
+        android:id="@+id/item_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/check_progress_tabs" />
