--- a/app/src/main/res/layout/item_dashboard_card.xml
+++ b/app/src/main/res/layout/item_dashboard_card.xml
@@ -24,7 +24,7 @@
     android:layout_margin="4dp">
 
     <FrameLayout
-        android:id="@+id/container"
+        android:id="@+id/item_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
@@ -33,7 +33,7 @@
         android:clickable="true">
 
         <TextView
-            android:id="@+id/city_name"
+            android:id="@+id/item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
@@ -46,7 +46,7 @@
             tools:text="Washington" />
 
         <ImageView
-            android:id="@+id/city_image"
+            android:id="@+id/item_icon"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
