--- a/app/src/main/res/menu/menu_dashboard.xml
+++ b/app/src/main/res/menu/menu_dashboard.xml
@@ -16,17 +16,13 @@
   ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-</RelativeLayout>
+    <item
+        android:id="@+id/action_map"
+        android:icon="@drawable/ic_help_outline"
+        android:orderInCategory="100"
+        android:title="@string/menu_help"
+        app:showAsAction="always" />
+</menu>
