--- a/app/src/main/res/layout/item_dashboard_card.xml
+++ b/app/src/main/res/layout/item_dashboard_card.xml
@@ -23,14 +23,26 @@
     android:layout_gravity="center"
     android:layout_margin="4dp">
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/item_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_margin="4dp"
         android:background="?android:selectableItemBackground"
-        android:clickable="true">
+        android:clickable="true"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/item_icon"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp"
+            android:scaleType="fitCenter"
+            tools:src="@drawable/ic_bug" />
 
         <TextView
             android:id="@+id/item_name"
@@ -42,14 +54,6 @@
             android:paddingTop="4dp"
             android:textColor="@android:color/black"
             android:textSize="12sp"
-            android:visibility="invisible"
-            tools:text="Washington" />
-
-        <ImageView
-            android:id="@+id/item_icon"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:scaleType="centerInside" />
-    </FrameLayout>
+            tools:text="@string/drawer_item_search_center" />
+    </LinearLayout>
 </android.support.v7.widget.CardView>
