--- a/app/src/main/res/menu/menu_dashboard.xml
+++ b/app/src/main/res/menu/menu_dashboard.xml
@@ -20,7 +20,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_map"
+        android:id="@+id/action_help"
         android:icon="@drawable/ic_help_outline"
         android:orderInCategory="100"
         android:title="@string/menu_help"
