--- a/app/src/main/res/values-land-v21/styles.xml
+++ b/app/src/main/res/values-land-v21/styles.xml
@@ -16,14 +16,7 @@
   ~  along with this program.  If not, see <http://www.gnu.org/licenses/>
   -->
 
-<transitionSet xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="300"
-    android:interpolator="@android:interpolator/linear_out_slow_in">
+<resources>
 
-    <changeBounds>
-        <arcMotion
-            android:maximumAngle="0"
-            android:minimumHorizontalAngle="90"
-            android:minimumVerticalAngle="60" />
-    </changeBounds>
-</transitionSet>
+    <style name="AppTheme.TransNav" parent="AppTheme.NoActionBar" />
+</resources>
