--- a/app/src/main/res/layout/fragment_dashboard_learner.xml
+++ b/app/src/main/res/layout/fragment_dashboard_learner.xml
@@ -189,7 +189,9 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:foreground="?selectableItemBackground"
+                android:onClick="scheduleOnClick">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -203,14 +205,15 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="8dp"
-                        android:src="@drawable/ic_bug" />
+                        android:src="@drawable/ic_view_week"
+                        android:tint="@color/primary" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="8dp"
-                        android:text="@string/drawer_item_report_issues" />
+                        android:text="@string/drawer_item_schedule" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
         </LinearLayout>
@@ -246,6 +249,35 @@
                         android:layout_gravity="center"
                         android:layout_margin="8dp"
                         android:text="@string/drawer_item_contact_trainer" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="8dp"
+                android:layout_weight="1">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:foreground="?selectableItemBackground"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="8dp"
+                        android:src="@drawable/ic_bug" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="8dp"
+                        android:text="@string/drawer_item_report_issues" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
         </LinearLayout>
