--- a/app/src/main/res/layout/fragment_dashboard_trainer.xml
+++ b/app/src/main/res/layout/fragment_dashboard_trainer.xml
@@ -139,7 +139,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="8dp"
-                        android:src="@drawable/ic_upload" />
+                        android:src="@drawable/ic_update_skillset" />
 
                     <TextView
                         android:layout_width="wrap_content"
