--- a/app/src/main/res/layout/fragment_dashboard_training_partner.xml
+++ b/app/src/main/res/layout/fragment_dashboard_training_partner.xml
@@ -49,7 +49,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="8dp"
-                        android:src="@drawable/ic_map_faw" />
+                        android:src="@drawable/ic_training_center" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -77,7 +77,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="8dp"
-                        android:src="@drawable/ic_trainer"
+                        android:src="@drawable/ic_manage_trainers"
                         android:tint="@color/accent" />
 
                     <TextView
@@ -112,13 +112,14 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="8dp"
-                        android:src="@drawable/ic_sign_in" />
+                        android:src="@drawable/ic_enroll_pmkvy" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="8dp"
+                        android:gravity="center"
                         android:text="@string/drawer_item_enroll_learner_pmkvy" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
@@ -141,7 +142,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="8dp"
-                        android:src="@drawable/ic_sign_in" />
+                        android:src="@drawable/ic_nsdc_partner" />
 
                     <TextView
                         android:layout_width="wrap_content"
