--- a/app/src/main/res/layout/activity_csr.xml
+++ b/app/src/main/res/layout/activity_csr.xml
@@ -17,149 +17,112 @@
   -->
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="800dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:weightSum="1">
+        android:padding="32dp">
 
         <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="117dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="7dp"
-            android:text="Please fill in the details"
-            android:textSize="16sp"
-            tools:ignore="MissingConstraints" />
-
-        <TextView
-            android:id="@+id/name_label"
-            android:layout_width="83dp"
-            android:layout_height="33dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="44dp"
-            android:layout_weight="0.03"
-            android:text="@string/NAME"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/name"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginStart="52dp"
-            android:layout_marginTop="32dp"
-            android:layout_weight="0.00"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="" />
+            android:layout_height="wrap_content"
+            android:paddingTop="32dp"
+            android:text="@string/drawer_item_contribute_csr"
+            android:textColor="@color/skill_india_text_dark"
+            android:textSize="@dimen/abc_text_size_display_1_material" />
 
-        <TextView
-            android:id="@+id/type_label"
-            android:layout_width="49dp"
-            android:layout_height="33dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="47dp"
-            android:text="@string/TYPE"
-            android:textSize="16sp" />
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp">
 
-        <Spinner
+            <EditText
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/name_organization"
+                android:inputType="textPersonName"
+                android:maxLines="1"
+                android:textSize="@dimen/abc_text_size_body_2_material" />
+        </android.support.design.widget.TextInputLayout>
+
+        <com.ssn.skillindia.ui.LabelledSpinner
             android:id="@+id/type_spinner"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginStart="52dp"
-            android:layout_marginTop="35dp" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            custom:labelText="@string/type_of_agreement"
+            custom:widgetColor="@color/colorAccent" />
 
-
-        <TextView
-            android:id="@+id/sector_label"
-            android:layout_width="wrap_content"
-            android:layout_height="33dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="35dp"
-            android:text="@string/SECTOR_TARGETED"
-            android:textSize="16sp" />
-
-        <Spinner
+        <com.ssn.skillindia.ui.LabelledSpinner
             android:id="@+id/sector_spinner"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginStart="52dp"
-            android:layout_marginTop="35dp"
-            android:layout_weight="0.05" />
-
-        <TextView
-            android:id="@+id/amt_label"
-            android:layout_width="wrap_content"
-            android:layout_height="33dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="47dp"
-            android:layout_weight="0.08"
-            android:text="@string/AMOUNT"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/amount"
-            android:layout_width="match_parent"
-            android:layout_height="45sp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="10dp"
-            android:ems="10"
-            android:inputType="number" />
-
-        <TextView
-            android:id="@+id/email_label"
-            android:layout_width="wrap_content"
-            android:layout_height="33dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="47dp"
-            android:text="@string/EMAIL"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/email"
-            android:layout_width="284dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="10dp"
-            android:ems="10"
-            android:inputType="textEmailAddress" />
+            android:layout_marginTop="16dp"
+            custom:labelText="@string/sector_targeted"
+            custom:widgetColor="@color/colorAccent" />
 
-        <TextView
-            android:id="@+id/objective"
-            android:layout_width="wrap_content"
-            android:layout_height="33dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="47dp"
-            android:text="@string/OBJECTIVE"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/objective_content"
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="10dp"
-            android:ems="10"
-            android:inputType="textMultiLine" />
+            android:layout_marginTop="32dp">
 
-        <Button
+            <EditText
+                android:id="@+id/amount"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/amount"
+                android:inputType="number"
+                android:maxLines="1"
+                android:textSize="@dimen/abc_text_size_body_2_material" />
+        </android.support.design.widget.TextInputLayout>
 
-            android:id="@+id/CSRSUBMIT"
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp">
+
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/hello_activity_email"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:textSize="@dimen/abc_text_size_body_2_material" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp">
+
+            <EditText
+                android:id="@+id/objective_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/objective"
+                android:inputType="textMultiLine"
+                android:maxLines="1"
+                android:textSize="@dimen/abc_text_size_body_2_material" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/submit_btn"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="50dp"
-            android:text="@string/CSR_SUBMIT" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="24dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:drawableEnd="@drawable/ic_navigate_next_accent"
+            android:drawableRight="@drawable/ic_navigate_next_accent"
+            android:padding="8dp"
+            android:text="@string/csr_submit"
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold" />
     </LinearLayout>
 </ScrollView>
