--- a/app/src/main/res/layout/activity_hello.xml
+++ b/app/src/main/res/layout/activity_hello.xml
@@ -19,17 +19,13 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:visibility="visible">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingBottom="32dp"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp"
-        android:paddingTop="32dp">
+        android:padding="32dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -126,7 +122,6 @@
                 custom:labelText="@string/hello_activity_gender"
                 custom:widgetColor="@color/colorAccent" />
         </LinearLayout>
-
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
